ws connect with defined yaml port

--- a/lib/linked_bus/web/views/layout.erb
+++ b/lib/linked_bus/web/views/layout.erb
@@ -47,7 +47,7 @@
           $.ajax({url: "/test/me", type: "POST" });
         });
 
-        var linkedBusWebSocket = new WS('<%= @identity %>')
+        var linkedBusWebSocket = new WS('<%= @identity %>', <%= LinkedBus.config.ws_port %>)
         linkedBusWebSocket.connect(onConnect);
 
         function onConnect(socket) {
