fix repo forkme name

--- a/lib/linked_bus/web/views/layout.erb
+++ b/lib/linked_bus/web/views/layout.erb
@@ -12,7 +12,7 @@
 
     <body>
     
-      <a href="https://github.com/tdantas/linkbus">
+      <a href="https://github.com/tdantas/linkedbus">
         <img style="position: absolute; top: 0; left: 0; border: 0;" src="/images/forkme.png" alt="Fork me on GitHub">
       </a>
 
